--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -10,10 +10,20 @@
   {% block style %}
     <style>
       .DEV_environment_ribbon, .STAGING_environment_ribbon {
-        position: fixed; left: -30px; top: 10px; z-index: 99999;
-        width: 100px; height: 24px; margin: 0; padding: 0;
-        line-height: 25px; text-align: center;
-        font-size: 14px; font-weight: 700; color: white; letter-spacing: 0;
+        position: fixed;
+        left: -30px;
+        top: 10px;
+        z-index: 99999;
+        width: 100px;
+        height: 24px;
+        margin: 0;
+        padding: 0;
+        line-height: 25px;
+        text-align: center;
+        font-size: 14px;
+        font-weight: 700;
+        color: white;
+        letter-spacing: 0;
 
         -webkit-transform: rotate(-45deg);
         -moz-transform: rotate(-45deg);
@@ -21,15 +31,18 @@
         -o-transform: rotate(-45deg);
         transform: rotate(-45deg);
 
-        box-shadow: 0 2px 2px rgba(0,0,0,.3);
-        -webkit-box-shadow: 0 2px 2px rgba(0,0,0,.3);
-        -moz-box-shadow: 0 2px 2px rgba(0,0,0,.3);
+        box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+        -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
       }
-      .DEV_environment_ribbon{
+
+      .DEV_environment_ribbon {
         background: #5fce0c;
       }
+
       .STAGING_environment_ribbon {
-        background: #e74c3c; font-size: 11px;
+        background: #e74c3c;
+        font-size: 11px;
       }
     </style>
   {% endblock %}
@@ -37,7 +50,6 @@
   {% block head %}
     <link rel="stylesheet" href="{{ STATIC_URL }}/css/admin/admin.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    {#<link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">#}
     <link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/css/datepicker.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/datatables/media/css/dataTables.bootstrap.min.css">
@@ -67,7 +79,6 @@
           "bootstrap.datatables": "bower_components/datatables/media/js/dataTables.bootstrap",
           "bootstrap.fileinput": "bower_components/bootstrap-fileinput/js/fileinput.min",
 
-          "d3": "bower_components/d3/d3.min",
           "datatables.net": "bower_components/datatables/media/js/jquery.dataTables",
           "select2": "bower_components/select2/select2",
           "moment": "bower_components/moment/moment",
@@ -91,8 +102,7 @@
 
           "comm": "js/comm",
           "publisher": "js/publisher",
-          "super": "js/super",
-          "linegraph": "js/admin/line_graph"
+          "super": "js/super"
         },
         shim: {
           "bootstrap": ["jquery"],
@@ -157,7 +167,7 @@
     </div>
   </div>
 
-  <div class="row"> {# 메뉴가 좌측 #}
+  <div class="row">
     <div class="col-xs-12 col-lg-2">
       {% include '/comm/left_menu_new.twig' %}
     </div>
@@ -170,21 +180,7 @@
       {% block body %}
       {% endblock %}
     </div>
-  </div> {# 메뉴가 좌측 - 여기까지 #}
-
-  {#<div class="row"> &#123;&#35; 메뉴가 우측 &#35;&#125;#}
-  {#<div class="col-md-10 col-lg-8 col-sm-10 col-md-offset-0 col-lg-offset-1 col-sm-offset-1">#}
-  {#<blockquote>#}
-  {#<h2>{% block title %}{% endblock %}#}
-  {#</h2>#}
-  {#</blockquote>#}
-  {#{% block body %}#}
-  {#{% endblock %}#}
-  {#</div>#}
-  {#<div class="col-md-2 col-lg-2 hidden-sm hidden-xs">#}
-  {#{% include '/comm/left_menu_new.twig' %}#}
-  {#</div> &#123;&#35; 메뉴가 우측 - 여기까지 &#35;&#125;#}
-  {#</div>#}
+  </div>
 </div>
 
 {% block script %}
