jquery.datatable 오류 수정

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -145,7 +145,7 @@
         });
       });
 
-      require(['datatables.net'], function () {
+      requirejs(['jquery', 'bootstrap.datatables'], function ($) {
         $('*[datatable]').dataTable({"bPaginate": false});
       });
     </script>
