--- a/views/index.twig
+++ b/views/index.twig
@@ -84,7 +84,7 @@
           "jquery.form": "bower_components/jquery-form/jquery.form",
           "jquery.browser": "bower_components/jquery.browser/dist/jquery.browser.min",
           "jquery.tmpl": "js/jquery.tmpl.min",
-          "attrajax": "bower_components/AttrAjax/attrajax",
+          "jquery.attrajax": "bower_components/jquery.attrajax/jquery.attrajax",
           "iframeAutoHeight": "bower_components/jquery-iframe-auto-height/dist/jquery-iframe-auto-height.min",
           "datatables.net": "bower_components/datatables/media/js/jquery.dataTables",
           "highlight": "bower_components/jquery-highlight/jquery.highlight",
@@ -99,7 +99,7 @@
           "jquery.form": ["jquery"],
           "jquery.browser": ["jquery"],
           "jquery.tmpl": ["jquery"],
-          "attrajax": ["jquery", 'jquery.form'],
+          "jquery.attrajax": ["jquery", 'jquery.form'],
           "iframeAutoHeight": ["jquery", 'jquery.browser'],
           "datatables.net": ["jquery"],
           "highlight": ["jquery"],
