--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -87,7 +87,7 @@
           "ace": "bower_components/ace-builds/src",
           "spin": "bower_components/spin.js/spin",
           "jquery.form": "bower_components/jquery-form/jquery.form",
-          "attrajax": "bower_components/AttrAjax/attrajax",
+          "jquery.attrajax": "bower_components/jquery.attrajax/jquery.attrajax",
           'jquery.tmpl': 'js/jquery.tmpl.min',
           'tinyMCE': 'bower_components/tinymce/tinymce.min',
           "lazyload": "bower_components/vanilla-lazyload/dist/lazyload.min",
@@ -108,7 +108,7 @@
           "bootstrap.datepicker": ["jquery"],
           "bootstrap.datatables": ["datatables.net"],
 
-          "attrajax": ["jquery"],
+          "jquery.attrajax": ["jquery"],
           "datatables.net": ["jquery"],
           "jquery.form": ["jquery"],
           "monthpicker": ["jquery"],
