--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -59,7 +59,8 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}/css/cms-bootstrap.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/css/jquery.monthpicker-0.1.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/bootstrap-fileinput/css/fileinput.min.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet"
+          href="{{ STATIC_URL }}/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
 
     <script type="text/javascript" src="{{ STATIC_URL }}/bower_components/requirejs/require.js"></script>
     <script>
@@ -107,6 +108,7 @@
           "bootstrap": ["jquery"],
           "bootstrap.datepicker": ["jquery"],
           "bootstrap.datatables": ["datatables.net"],
+          "bootstrap.fileinput": ["bootstrap"],
 
           "jquery.attrajax": ["jquery"],
           "datatables.net": ["jquery"],
@@ -161,7 +163,8 @@
   {# Internet Explorer 브라우저로 접속시 경고 출력 #}
   <div hidden class="col-xs-push-8" id="js_ie_alert" style="position: fixed; z-index: 10; opacity: 0.75;">
     <div class="alert alert-danger">
-      <strong>경고!</strong> Internet Explorer 에서는 일부 기능이 정상적으로 작동하지 않을 수 있습니다. <a href="https://www.google.co.kr/chrome/browser/desktop/" class="alert-link">Chrome 브라우저</a>를 사용해주세요.
+      <strong>경고!</strong> Internet Explorer 에서는 일부 기능이 정상적으로 작동하지 않을 수 있습니다. <a
+        href="https://www.google.co.kr/chrome/browser/desktop/" class="alert-link">Chrome 브라우저</a>를 사용해주세요.
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     </div>
   </div>
