--- a/views/comm/left_menu.twig
+++ b/views/comm/left_menu.twig
@@ -12,7 +12,7 @@
                 {% endif %}
             {% endfor %}
             <li><a href="/admin/comm/user_info"><b>개인정보 수정</b></a></li>
-            <li><a href="/admin/logout"><b>Logout</b></a></li>
+            <li><a href="/logout"><b>Logout</b></a></li>
         </ul>
         <div id="bot"></div>
     </div>
