--- a/views/comm/left_menu_new.twig
+++ b/views/comm/left_menu_new.twig
@@ -32,7 +32,7 @@
             {% endif %}
         {% endfor %}
         <li><a href="/admin/comm/user_info">개인정보 수정</a></li>
-        <li><a href="/admin/logout">Logout</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </div>
 <div class="hidden-lg">{#타블렛, 핸드폰 사이즈#}
