index.twig requirejs.config 변경
 - jquery.attrajax requre 변경

--- a/views/index.twig
+++ b/views/index.twig
@@ -99,7 +99,7 @@
           "jquery.form": ["jquery"],
           "jquery.browser": ["jquery"],
           "jquery.tmpl": ["jquery"],
-          "jquery.attrajax": ["jquery", 'jquery.form'],
+          "jquery.attrajax": ["jquery", 'jquery.form', "jquery.tmpl"],
           "iframeAutoHeight": ["jquery", 'jquery.browser'],
           "datatables.net": ["jquery"],
           "highlight": ["jquery"],
