--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -110,7 +110,7 @@
           "bootstrap.datatables": ["datatables.net"],
           "bootstrap.fileinput": ["bootstrap"],
 
-          "jquery.attrajax": ["jquery"],
+          "jquery.attrajax": ["jquery", 'jquery.form', "jquery.tmpl"],
           "datatables.net": ["jquery"],
           "jquery.form": ["jquery"],
           "monthpicker": ["jquery"],
