개인 정보 수정 페이지 리팩토링

--- a/views/comm/left_menu.twig
+++ b/views/comm/left_menu.twig
@@ -11,7 +11,7 @@
                     <li class="sub"><a href="{{ menu.menu_url }}" {% if menu.is_newtab %}target="_blank"{% endif %}>{{ menu.menu_title }}</a></li>
                 {% endif %}
             {% endfor %}
-            <li><a href="/admin/comm/user_info"><b>개인정보 수정</b></a></li>
+            <li><a href="/comm/user_info"><b>개인정보 수정</b></a></li>
             <li><a href="/logout"><b>Logout</b></a></li>
         </ul>
         <div id="bot"></div>
