--- a/views/comm/left_menu_new.twig
+++ b/views/comm/left_menu_new.twig
@@ -31,7 +31,7 @@
                 </li>
             {% endif %}
         {% endfor %}
-        <li><a href="/admin/comm/user_info">개인정보 수정</a></li>
+        <li><a href="/comm/user_info">개인정보 수정</a></li>
         <li><a href="/logout">Logout</a></li>
     </ul>
 </div>
