--- a/views/super/user_list.twig
+++ b/views/super/user_list.twig
@@ -47,7 +47,7 @@
   </form>{#pageNaviForm form#}
   </div>{#col-xs-12#}
 
-  <table class="table table-striped table-bordered table-hover" id="admin_user_table">
+  <table class="table table-bordered table-hover" id="admin_user_table">
     <colgroup>
       <col width="150"/>
       <col width=""/>
