CMS 내 회계/정산 관련 화면 내 테이블들에 쓰이는 숫자 데이터들 포맷팅

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -148,6 +148,13 @@
       requirejs(['jquery', 'bootstrap.datatables'], function ($) {
         $('*[datatable]').dataTable({"bPaginate": false});
       });
+
+      requirejs(["jquery", "comm/format.util"], function ($, format) {
+        // 테이블 내 숫자 관련 cell formatting
+        $(".js-digit-cell").each(function (c, obj) {
+          $(obj).css({"text-align": "right"}).text(format.priceFormatting($(obj).text()));
+        });
+      });
     </script>
   {% endblock %}
 </head>
