js 마크업 가이드 준수 (dash 대신 underscore 사용)

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -151,7 +151,7 @@
 
       requirejs(["jquery", "comm/format.util"], function ($, format) {
         // 테이블 내 숫자 관련 cell formatting
-        $(".js-digit-cell").each(function (c, obj) {
+        $(".js_digit_cell").each(function (c, obj) {
           $(obj).css({"text-align": "right"}).text(format.priceFormatting($(obj).text()));
         });
       });
