--- a/views/super/menu_list.twig
+++ b/views/super/menu_list.twig
@@ -279,10 +279,8 @@
       </tr>
       </tbody>
     </table>
-    <div class="control-group">
-      <div class="btn-group pull-right">
-        <button type="button" class="btn btn-default" id="insertBtn">저장</button>
-      </div>
+    <div class="btn-group pull-right">
+      <button type="button" class="btn btn-default" id="insertBtn">저장</button>
     </div>
   </form>
 
@@ -369,12 +367,14 @@
       {% endfor %}
       </tbody>
     </table>
-    <div class="control-group">
-      <div class="btn-group pull-right">
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="pull-right">
         <button type="button" class="btn btn-primary" id="updateBtn">저장</button>
         <button type="button" class="btn btn-default" id="cancelBtn">취소</button>
       </div>
-    </div>
+    </nav>
+
   </form>
 
   <!-- Ajax Menu Modal -->
