--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -181,6 +181,14 @@
       {% include '/comm/left_menu_new.twig' %}
     </div>
     <div class="col-xs-12 col-lg-10">
+      {% for type, messages in app.flashes %}
+        {% for message in messages %}
+          <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endfor %}
+
       <ul>
         <li><h3>{% block title %}{% endblock %}</h3></li>
         {% if purpose %}
