--- a/views/super/tags.twig
+++ b/views/super/tags.twig
@@ -15,21 +15,6 @@
           $(this).parents('tr').find('input[type=checkbox]').attr('checked', 'checked');
         });
 
-        // 태그 등록
-        $('#insertBtn').click(function () {
-          if (fn_validate()) {
-            $("#command").val("insert");
-            $.post('/super/tag_action.ajax', $("#js_insert_form").serialize(), function (returnData) {
-              if (returnData.success) {
-                alert(returnData.msg);
-                window.location.reload();
-              } else {
-                alert(returnData.msg);
-              }
-            }, 'json');
-          }
-        });
-
         // 태그 목록 수정
         $('#updateBtn').click(function () {
           var container = '';
@@ -55,11 +40,6 @@
           }, 'json');
         });
 
-        // 수정 취소
-        $('#cancelBtn').click(function () {
-          window.location.reload();
-        });
-
         var tag_menu_select = $("#tag_menu_select");
         tag_menu_select.select2().change(function (e) {
           if (e.added) {
@@ -71,6 +51,27 @@
               fn_executeTagMenu(e.removed.id, 'delete_tag_menu');
             }
           }
+        });
+
+        $('#js_delete').click(() => {
+          if (!confirm('선택한 항목들을 삭제하시겠습니까?')) {
+            return;
+          }
+
+          $('#updateForm input:checked').map((i, e) => {
+
+            const $tr = $(e).parents('tr');
+            const tagId = $tr.find('input[name=id]').val();
+
+            $.ajax({
+              url: '/super/tags/' + tagId,
+              type: 'DELETE'
+            }).done((result) => {
+              if (result.success) {
+                $tr.detach();
+              }
+            });
+          });
         });
       });
     });
@@ -131,22 +132,11 @@
         }
       }, 'json');
     }
-
-    // 태그 등록 / 수정 validate
-    function fn_validate() {
-      var input_tag_name = $("#js_insert_form input[name=name]");
-      if (input_tag_name.val() == '') {
-        alert('태그 이름을 입력하여 주십시오.');
-        input_tag_name.focus();
-        return false;
-      }
-      return true;
-    }
   </script>
 {% endblock %}
 {% block body %}
   <h4>태그 등록</h4>
-  <form id="js_insert_form" class="clearfix">
+  <form class="clearfix" method="POST">
     <input type="hidden" id="command" name="command"/>
     <table class="table table-bordered">
       <colgroup>
@@ -172,7 +162,7 @@
       </tbody>
     </table>
     <div class="pull-right">
-      <button type="button" class="btn btn-primary" id="insertBtn"><i class="icon-file"></i> 저장</button>
+      <button type="submit" class="btn btn-primary"><i class="icon-file"></i> 저장</button>
     </div>
   </form>
 
@@ -187,20 +177,26 @@
         <col width="80"/>
         <col width="80"/>
         <col width="80"/>
+        <col width="80"/>
+        <col width="80"/>
+        <col width="80"/>
       </colgroup>
       <thead>
       <tr>
         <th></th>
         <th>ID</th>
         <th>태그 이름</th>
+        <th>생성자</th>
         <th>사용 여부</th>
+        <th>최초 생성일</th>
+        <th>최근 수정일</th>
         <th>포함된 메뉴</th>
         <th>사용 유저 수</th>
         <th></th>
       </tr>
       </thead>
       <tbody>
-      {% for tag in tag_list %}
+      {% for tag in tags %}
         <tr id="tag_tr_{{ tag.id }}" {% if tag.is_use == 0 %}class="danger"{% endif %}>
           <td>
             <input type="checkbox">
@@ -208,14 +204,17 @@
           </td>
           <td>{{ tag.id }}</td>
           <td><input type="text" class="input-block-level" name="name" value="{{ tag.name }}"/></td>
+          <td>{{ tag.creator }}</td>
           <td>
             <select class="input-block-level" name="is_use">
               <option value="1" {% if tag.is_use == 1 %}selected="selected"{% endif %}>Y</option>
               <option value="0" {% if tag.is_use == 0 %}selected="selected"{% endif %}>N</option>
             </select>
           </td>
-          <td>{{ tag.count_menu }}</td>
-          <td>{{ tag.count_user }}</td>
+          <td>{{ tag.created_at }}</td>
+          <td>{{ tag.updated_at }}</td>
+          <td>{{ tag.menus_count }}</td>
+          <td>{{ tag.users_count }}</td>
           <td>
             <button type="button" class="btn btn-default btn-sm" onclick="fn_showMapping('{{ tag.id }}')"><i class="icon-forward"></i> 보기</button>
           </td>
@@ -225,8 +224,8 @@
     </table>
     <div>
       <div class="pull-right">
-        <button type="button" class="btn btn-primary" id="updateBtn"><i class="icon-file"></i> 저장</button>
-        <button type="button" class="btn btn-default" id="cancelBtn"><i class="icon-repeat"></i> 취소</button>
+        <button type="button" class="btn btn-danger" id="js_delete">삭제</button>
+        <button type="button" class="btn btn-primary" id="updateBtn">저장</button>
       </div>
     </div>
   </form>
