--- a/views/super/tags.twig
+++ b/views/super/tags.twig
@@ -162,7 +162,7 @@
       </tbody>
     </table>
     <div class="pull-right">
-      <button type="submit" class="btn btn-primary"><i class="icon-file"></i> 저장</button>
+      <button type="submit" class="btn btn-primary">저장</button>
     </div>
   </form>
 
