메뉴 생성/수정 timestamp 기록되도록 스키마 변경 tags, menus URL 규칙 수정

--- a/views/super/tags.twig
+++ b/views/super/tags.twig
@@ -76,8 +76,7 @@
       });
     });
 
-    function showTagUsers(tagId)
-    {
+    function showTagUsers(tagId) {
       $('#js_users_dialog').modal();
 
       // clear
@@ -93,7 +92,7 @@
           return (`
             <li>
               <h4>
-                <a class="label label-default" href="/super/user_detail?id=${admin.id}" target="_blank">${admin.name}</a>
+                <a class="label label-default" href="/super/users/${admin.id}" target="_blank">${admin.name}</a>
               </h4>
             </li>`
           );
