도서 파일 대량 변경에서 사용하는 jquery plugin 추가

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -71,6 +71,14 @@
           // 1.11 부터는 AMD 지원, 스크립트 파일이 아닌 폴더를 지정
           'jquery-ui': '/static/bower_components/jquery-ui/ui',
 
+          // jquery.fileupload에서 아래 이름으로 하드코딩되어 있어서
+          'jquery.ui.widget': '/static/bower_components/jquery-ui/ui/widget',
+
+          'jquery.fileupload': '/static/bower_components/jquery-file-upload/js/jquery.fileupload',
+          'jquery.fileupload-process': '/static/bower_components/jquery-file-upload/js/jquery.fileupload-process',
+          'jquery.fileupload-validate': '/static/bower_components/jquery-file-upload/js/jquery.fileupload-validate',
+          'jquery.iframe-transport': '/static/bower_components/jquery-file-upload/js/jquery.iframe-transport',
+
           'bootstrap': '/static/bower_components/bootstrap/dist/js/bootstrap.min',
           'bootstrap.datepicker': '/static/bower_components/bootstrap-datepicker/js/bootstrap-datepicker',
           'bootstrap.datetimepicker': '/static/bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker',
