어드민 목록에서 페이징 결과가 정상적이지 않은 문제

--- a/views/super/users.twig
+++ b/views/super/users.twig
@@ -75,6 +75,7 @@
   </table>
 
   <nav class="text-center">
-    {{ paging|raw }}
+    {% import 'macros/paging.macro.twig' as paging_macro %}
+    {{ paging_macro.render_paging_new(paging) }}
   </nav>
 {% endblock %}
